# gnuplotpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cpp_publication_plotting_design_doc.md
apps/: gnuplotpp_cli.cpp
cmake/: dependencies.cmake
docs/: API_CONTRACTS.md  BEST_PRACTICES.md  EXAMPLES.md  GETTING_STARTED.md  PLOT_CONTROLS.md  README.md  STATISTICS_GUIDE.md  STYLING_AND_PRESETS.md  TROUBLESHOOTING.md
examples/: example_common.hpp  feature_rich_showcase.cpp  interactive_facet_example.cpp  layout_2x2_example.cpp  monte_carlo_alpha_example.cpp  stats_plot_examples.cpp  three_line_ieee_example.cpp  tufte_minimal_example.cpp  two_window_example.cpp  yaml_spec_example.cpp
examples/specs/: minimal.csv  minimal.yaml
include/gnuplotpp/: api.hpp  builder.hpp  data.hpp  facet.hpp  gnuplot_backend.hpp  logging.hpp  model_overlays.hpp  plot.hpp  png_backend.hpp  presets.hpp  quickstart.hpp  spec_yaml.hpp  statistics.hpp  svg_backend.hpp  templates.hpp  theme.hpp  transforms.hpp
scripts/: refresh_readme_assets.sh
src/: data.cpp  facet.cpp  figure.cpp  gnuplot_backend.cpp  gnuplot_backend_emit.cpp  gnuplot_backend_internal.hpp  model_overlays.cpp  png_backend.cpp  presets.cpp  spec_yaml.cpp  statistics.cpp  svg_backend.cpp  templates.cpp  theme.cpp  transforms.cpp
tests/: api_test.cpp  gnuplot_backend_test.cpp  png_backend_test.cpp  svg_backend_test.cpp
